# rs-avro-schema-gen

./: .gitignore  Cargo.toml  README.md  doc-web.sh  rs-avro-schema-gen  rs-avro-schema-gen.wasm  run.sh
sample.d/: generated-avro-schema.toml  generated.avsc  sample-row.json
src/: app.rs  lib.rs  main.rs  util.rs
src/app/: json2flat.rs
src/record/: flat.rs
