[package]
name = "rs-avro-schema-gen"
version = "0.1.0"
edition = "2021"

description = "Generates simple AVSC from input JSON"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-avro-schema-gen/latest"
repository = "https://github.com/takanoriyanagitani/rs-avro-schema-gen"
keywords = [
    "avro",
	"avsc",
	"schema",
	"json",
	"cli",
]
categories = [
    "command-line-interface",
    "command-line-utilities",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release]
lto = true
strip = true
codegen-units = 16

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.serde_json]
version = "1.0.133"
default-features = false
features = [
	"std",
]

[dependencies.serde]
version = "1.0.215"
default-features = false
features = [
	"std",
	"derive",
]
